# Stock-Data-Pipeline

./: .replit  README.md  backfill_fundamentals_history_from_dump.sql  pyproject.toml  remaining_fundamentals_null_cells.csv  remaining_fundamentals_nulls.csv  replit.md
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: stock-api-proxy.ts
attached_assets/: Pasted-Build-a-production-ready-data-pipeline-that-scrapes-cle_1774498049398.txt
lib/db/src/schema/: index.ts  stock-scraper.ts
stock_scraper/: .env.example  README.md  __main__.py  requirements.txt
stock_scraper/app/: config.py
stock_scraper/app/api/: main.py
stock_scraper/app/db/: database.py
stock_scraper/app/pipeline/: queue.py  scheduler.py  worker.py
stock_scraper/app/scraper/: cleaner.py  parser.py  screener_scraper.py
stock_scraper/app/utils/: logger.py  retry.py
stock_scraper/migrations/: 001_create_tables.sql
stock_scraper/scripts/: load_companies.py  run_migrations.py  run_scraper.py
